<resources>
    <string name="app_name">MakeSurvey</string>
    <string name="tab_text_1">Make a Survey</string>
    <string name="tab_text_2">Surveys</string>
    <string name="tab_text_3">All Surveys</string>
    <string name="tab_text_4">FIll All</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_a_questions">Add A Questions</string>
    <string name="selected">SELECTED</string>
    <string name="clasic">CLASSIC</string>
    <string name="multiple_choice">MULTIPLE CHOICE</string>
    <string name="Write_your_question">Write your question</string>
    <string name="write_an_answer">Write an answer</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>


    <!-- Execution API status strings -->
    <string name="retrieve_status">Retrieving selected text…</string>
    <string name="translate_status">Translating…</string>
    <string name="replace_status">Replacing text with translation…</string>

    <!-- Layout strings -->
    <string name="replace_button">Replace</string>
    <string name="cancel_button">Cancel</string>
    <string name="exit_button">Exit</string>
    <string name="selected_text_hint">Original selected text</string>
    <string name="translation_text_hint">Select languages to acquire and edit
        translated text.</string>
    <string name="translate_from">Selected language</string>
    <string name="translate_to">Translate into</string>
    <string-array name="origin_lang_spinner">
        <item>Auto-detect</item>
        <item>Arabic</item>
        <item>Chinese</item>
        <item>English</item>
        <item>French</item>
        <item>German</item>
        <item>Hindi</item>
        <item>Japanese</item>
        <item>Portuguese</item>
        <item>Spanish</item>
    </string-array>
    <string-array name="dest_lang_spinner">
        <item>Arabic</item>
        <item>Chinese</item>
        <item>English</item>
        <item>French</item>
        <item>German</item>
        <item>Hindi</item>
        <item>Japanese</item>
        <item>Portuguese</item>
        <item>Spanish</item>
    </string-array>

    <string name="default_launch">Mobile Doc Translate is a mobile add-on. It
        is not meant to be launched directly. Rather, it should be called from
        the Google Docs editor app by highlighting text and selecting
        \"Mobile Doc Translate\" from the context menu.</string>

    <!-- General status strings -->
    <string name="unexpected_app">Called from unexpected app: </string>
    <string name="gps_required">Google Play Services required.
            After installing, close and relaunch this app.</string>
    <string name="get_accounts_rationale">This app needs to access your
            Google account (via Contacts).</string>
    <string name="get_accounts_denied_message">Missing required
            permissions!</string>
    <string name="no_auth_provided">Authorization not provided.</string>
    <string name="no_network">No network connection available.</string>
    <string name="error_occurred">Unrecoverable error occurred</string>
    <string name="script_error">\nScript error!\n</string>
    <string name="script_error_trace">\nScript error stacktrace:</string>
    <string name="survey_name">Survey Name</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">SIGn IN OR REGISTER</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="appname">Make Survey</string>
    <string name="title_activity_first_page">FirstPage</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="register">REGISTER</string>
    <string name="login">LOGIN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sing_in">SING IN</string>
    <string name="log_out">Log Out</string>

    <string name="name">Name</string>

    <string name="email">Email</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="Mail_Helper">like : UserName@mail.com</string>
    <string name="password">Password</string>
    <string name="write_your_answer">Write your answer</string>
    <string name="save_all">Save All</string>

    <string name="publish_link">Publish Link</string>
    <string name="result">Result</string>
    <string name="add_survey_question">Add Survey Question</string>
    <string name="survey_description">Survey Description</string>
    <string name="lifetime_for_survey">Lifetime for Survey:</string>
    <string name="yyyy_mm_dd">yyyy/mm/dd</string>
    <string name="save_changes">Save Changes</string>
    <string name="user_setting">User Setting</string>
    <string name="our_site">Our Site</string>
    <string name="google_form">Google Form</string>
    <string name="age">Age</string>
    <string name="country">Country</string>
    <string name="profile_picture">Profile picture</string>
    <string name="are_u_sure">Are you sure?</string>
    <string name="Update_Profil_Picture">Update Profil Picture</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="birthday">Birthday</string>
    <string name="phone_number">Phone Number</string>
    <string name="title_activity_image_picker">ImagePickerActivity</string>

    <string name="action_settings">Settings</string>
    <string name="profile_desc">Rowan Sebastian Atkinson CBE is an English actor,  comedian and screenwriter</string>
    <string name="profile_title">Mr Bean</string>
    <string name="posts">posts</string>
    <string name="followers">followers</string>
    <string name="following">following</string>
    <string name="msg_error_unable_select_profile_pic">Unable to set profile image. Please try again!</string>
    <string name="lbl_set_profile_photo">Set profile image</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>

    <!-- font families -->
    <string name="font_family_light">sans-serif-light</string>
    <string name="font_family_medium">sans-serif-medium</string>
    <string name="font_family_regular">sans-serif</string>
    <string name="font_family_condensed">sans-serif-condensed</string>
    <string name="font_family_black">sans-serif-black</string>
    <string name="font_family_thin">sans-serif-thin</string>
    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>
    <string name="target_ages">Target age</string>
    <string name="there_is_no_survey_for_you_check_later">There is no survey for you.Check later</string>
    <string name="you_dont_have_any_survey_n_you_can_create_one_from_makesurvey_screen">You dont have any survey.\n You can create one from Makesurvey screen</string>
    <string-array
        name="string_age_group">
        <item
            >15–24 </item>
        <item
            >25–34 </item>
        <item
            >35–44 </item>
        <item
            >45–54</item>
        <item
            >55+</item>
    </string-array>
</resources>