<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white">

<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/SurveyNameLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:helperText="Maximum character is 30"> <EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/survey_name"

    android:id="@+id/editsave"

    android:inputType="text"/></com.google.android.material.textfield.TextInputLayout>

<com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:helperText="Maximum character is 20"
    android:id="@+id/SurveyDescriptionLayout">

    <com.google.android.material.textfield.TextInputEditText

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"

        android:id="@+id/SurveyDescription"
        android:hint="@string/survey_description"/></com.google.android.material.textfield.TextInputLayout>


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content" android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lifetime_for_survey" />
    <Spinner

    android:id="@+id/SurveyDateSpinner"
    android:layout_width="match_parent"
    android:textAlignment="center"

    android:layout_height="wrap_content"
    android:spinnerMode="dialog" />




</LinearLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:id="@+id/AgegroupLayout">

        <com.google.android.material.textfield.TextInputEditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"

            android:id="@+id/AgegroupText"
            android:hint="@string/target_ages"/></com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save" />
</LinearLayout>