<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.Classic"
    android:orientation="vertical"
    android:padding="25dp">
    <EditText

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Write_your_question"
        android:id="@+id/question"
        android:textSize="20dp"></EditText>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/write_an_answer"
        android:id="@+id/Answer1"
        android:textSize="14dp"></EditText>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/write_an_answer"
        android:id="@+id/Answer2"
        android:textSize="14dp"></EditText>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/write_an_answer"
        android:id="@+id/Answer3"
        android:textSize="14dp"></EditText>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/write_an_answer"
        android:id="@+id/Answer4"
        android:textSize="14dp"
        ></EditText>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/SaveButton"></Button>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:visibility="gone"
        android:id="@+id/DeleteButton"></Button>



</LinearLayout>